# AtCoder-Notify-Bot-Rust

./: .gitignore  AGENT.MD  Cargo.toml  LICENSE  README.MD  package-lock.json  package.json  readme.md  rustfmt.toml
.github/workflows/: Release.yml
src/: commands.rs  init.rs  main.rs  scraping.rs  send_message.rs  utils.rs  web_server.rs
src/assets/: commands_en.json  commands_ja.json
src/commands/: atcoder.rs  contests.rs  help.rs  link_accounts.rs  owner.rs  rating.rs  register_accounts.rs  role.rs  server.rs  set_ac_notify.rs  set_everyone.rs  set_language.rs  set_notification_contest.rs  set_notification_submission.rs  set_notify_everyone.rs  show_notification.rs
src/scraping/: atcoder_ratings.rs  contest_type.rs  contests.rs  diff.rs  get_ranking.rs  get_submission.rs  get_user_list.rs  login.rs  notify.rs  ranking_types.rs
src/utils/: image_to_buffer.rs  svg.rs  svg_to_png.rs
src/utils/svg/: create_table.rs  create_user_rating.rs
static/pages/: package.json  tailwind.config.js
static/pages/src/: 404.html  418.html  deviation.html  index.html  output.css  rating_other_contests.html  rating_simulator.html  supporters.html
wiki/: Home.md
