[package]
name = "atcoder_notify_bot"
version = "1.3.9"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "25.0.1"
image = "0.25.2"
chrono = "0.4.38"
reqwest = { version = "0.12.5", features = ["blocking", "cookies", "gzip"] }
scraper = "0.19.1"
fern = "0.6.2"
log = "0.4.22"
url = "2.5.2"
actix-web = "4"
actix-files = "0.6.6"
tera = "1"
resvg = "0.42.0"
tiny-skia = "0.11.4"
usvg = "0.42.0"
mime = "0.3.17"
fontdb = "0.21.0"
nutype = "0.4.3"
plotters = "0.3.6"
sha2 = "0.10.8"
dotenvy = "0.15.7"
fontdue = "0.9.2"
